added travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: java
 # skip installation step
 install: true
 
+cache:
+  directories:
+  - $HOME/.m2
+
 script:
 - mvn -f com.examples.myproject/pom.xml clean verify
 
