--- a/com.examples.myproject/pom.xml
+++ b/com.examples.myproject/pom.xml
@@ -12,6 +12,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jacoco.data.file>${project.build.directory}/coverage-reports/jacoco.exec</jacoco.data.file>
+  	<jacoco.report.path>${project.reporting.outputDirectory}/jacoco-ut</jacoco.report.path>
   </properties>
 
   <dependencies>
@@ -22,4 +24,81 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <profiles>
+    <profile>
+      <id>jacoco</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.7.7.201606060606</version>
+            <executions>
+              <!-- Prepares the property pointing to the JaCoCo runtime agent 
+                which is passed as VM argument when Maven the Surefire plugin is executed. -->
+              <execution>
+                <id>pre-unit-test</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+                <configuration>
+                  <!-- Sets the path to the file which contains the execution 
+                    data. -->
+                  <destFile>${jacoco.data.file}</destFile>
+                  <!-- Sets the name of the property containing the settings 
+                    for JaCoCo runtime agent. -->
+                  <propertyName>surefireArgLine</propertyName>
+                </configuration>
+              </execution>
+              <!-- Ensures that the code coverage report for unit tests is 
+                created after unit tests have been run. -->
+              <execution>
+                <id>post-unit-test</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+                <configuration>
+                  <!-- Sets the path to the file which contains the execution 
+                    data. -->
+                  <dataFile>${jacoco.data.file}</dataFile>
+                  <!-- Sets the output directory for the code coverage report. -->
+                  <outputDirectory>${jacoco.report.path}</outputDirectory>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+            <configuration>
+              <!-- Sets the VM argument line used when unit tests are run. -->
+              <argLine>${surefireArgLine}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.eluder.coveralls</groupId>
+              <artifactId>coveralls-maven-plugin</artifactId>
+              <version>4.3.0</version>
+              <configuration>
+                <jacocoReports>
+                  <jacocoReport>${jacoco.report.path}/jacoco.xml</jacocoReport>
+                </jacocoReports>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
+  
+  
 </project>
