--- a/com.examples.myproject/pom.xml
+++ b/com.examples.myproject/pom.xml
@@ -24,7 +24,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <profiles>
     <profile>
       <id>jacoco</id>
@@ -99,6 +112,5 @@
       </build>
     </profile>
   </profiles>
-  
   
 </project>
