--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
  - if [ "$WITH_COVERALLS" == "true" ];
    then
      mvn -f com.examples.myproject/pom.xml clean verify -Pjacoco coveralls:report;
-   else
+   elif [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then
      mvn -f com.examples.myproject/pom.xml clean verify;
    fi
 
