use an external build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,5 @@ cache:
   - $HOME/.m2
 
 script:
- - if [ "$WITH_COVERALLS" == "true" ];
-   then
-     mvn -f com.examples.myproject/pom.xml clean verify -Pjacoco coveralls:report;
-   elif [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then
-     mvn -f com.examples.myproject/pom.xml clean verify;
-   fi
+ - bash -e ./travis_build.sh
 
