--- a/com.examples.myproject/pom.xml
+++ b/com.examples.myproject/pom.xml
@@ -37,7 +37,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.9</version>
+        <version>${jacoco.version}</version>
       </plugin>
       <plugin>
         <groupId>org.eluder.coveralls</groupId>
