--- a/com.examples.myproject/pom.xml
+++ b/com.examples.myproject/pom.xml
@@ -50,7 +50,7 @@
           <plugin>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.7.7.201606060606</version>
+            <version>${jacoco.version}</version>
             <executions>
               <!-- Prepares the property pointing to the JaCoCo runtime agent 
                 which is passed as VM argument when Maven the Surefire plugin is executed. -->
